# parallel_proj

./: .gitignore  CMakeLists.txt  README.md  inteltbb_linux.sh  inteltbb_macos.sh  openmp_linux.sh  openmp_macos.sh  readme.txt
Intel_TBB/src/: shape.cpp  shape.h
OpenMP/: CMakeLists.txt
OpenMP/src/: main.cpp  shape.cpp  shape.h
inteltbb/: CMakeLists.txt
inteltbb/src/: main.cpp  shape.cpp  shape.h
src/: main.cpp  shape.cpp  shape.h
